<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/layout_background"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="false"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center"
            android:text="@string/app_version"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:background="@color/card_background">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/about_app"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/itemOpenSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state_selector"
                android:clickable="true"
                android:padding="8dp"
                android:onClick="onAbout"
                android:text="@string/about_source"/>

            <TextView
                android:id="@+id/itemScoreAndFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state_selector"
                android:clickable="true"
                android:padding="8dp"
                android:onClick="onAbout"
                android:text="@string/about_feedback"/>
            <TextView
                android:id="@+id/guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_state_selector"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/guide"/>

        </RadioGroup>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/about_developer"/>

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state_selector"
            android:layout_below="@id/author"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:onClick="onAbout"
            android:textColor="@color/colorAccent"
            android:text="@string/i_know"/>
    </RelativeLayout>

</RelativeLayout>